Resolves: tdf#101859 dispose unused popupmenu before dtor

Change-Id: I097a342f29aa88ab2d0a6a80b9ac6e1e9a5e3d5a